<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:weightSum="2"
    android:background="@drawable/button_rounded_corners"
    android:padding="12dp">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:text="New Text"
        android:id="@+id/textViewOrder"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="14sp"
        android:gravity="center_vertical|center_horizontal"
        android:padding="10dp"
        android:layout_weight="1.8"
         />


    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <Button
            android:id="@+id/date_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pick_date"
            android:background="@drawable/button_rounded_corners_red"
            android:textColor="@android:color/white"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textSize="16sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/date"
            android:id="@+id/date_textview"
            android:textColor="@android:color/white"
            android:gravity="center_horizontal|right"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textSize="16sp"
            android:freezesText="true" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <Button
            android:id="@+id/time_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pick_time"
            android:background="@drawable/button_rounded_corners_red"
            android:textColor="@android:color/white"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textSize="16sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/time"
            android:id="@+id/time_textview"
            android:textColor="@android:color/white"
            android:gravity="center_horizontal|right"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textSize="16sp"
            android:freezesText="true" />
    </TableRow>

    <CheckBox
        android:id="@+id/mode_24_hours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />



    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_order"
        android:id="@+id/buttonSo"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/button_rounded_corners_red"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="@android:color/white"
        android:layout_weight=".2"
        android:textSize="22sp" />

</LinearLayout>