<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="comapps.com.lakewoodsmokehousend.MainActivity">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="3"
        android:padding="60dp">

        <Button
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/drinkbutton"
    android:background="@drawable/button_rounded_corners_red"

    android:gravity="center_vertical|center_horizontal"
    android:textSize="36sp"
    android:text="@string/drink"
    android:textColor="@android:color/white"
    android:alpha="50"
    android:layout_margin="4dp"
    android:visibility="invisible"
            android:layout_weight="1" />

        <Button
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/eatbutton"

    android:gravity="center_vertical|center_horizontal"
    android:text="@string/eat"
    android:textColor="@android:color/white"
    android:textSize="36sp"
    android:alpha="50"
    android:background="@drawable/button_rounded_corners"
    android:layout_margin="4dp"
    android:visibility="invisible"
            android:layout_below="@+id/drinkbutton"
            android:layout_weight="1" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/togobutton"

            android:gravity="center_vertical|center_horizontal"
            android:text="@string/for_pickup"
            android:textColor="@android:color/white"
            android:textSize="36sp"
            android:background="@drawable/layout_rounded_corners_blacktored"
            android:layout_margin="4dp"
            android:visibility="invisible"
            android:layout_below="@+id/eatbutton"
            android:layout_weight="1" />
    </LinearLayout>


    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></FrameLayout>


</RelativeLayout>
