<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"


    android:id="@+id/ll"
    android:layout_width="wrap_content"
    android:layout_marginBottom="1dp"
    android:layout_marginTop="1dp"
    android:background="@drawable/layout_rounded_corners_red"
    android:baselineAligned="false"
    android:orientation="horizontal"
    android:paddingLeft="40dp"
    android:paddingRight="40dp"
    android:paddingTop="6dp"
    android:paddingBottom="6dp"
    android:layout_weight="1"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp">


    <LinearLayout
        android:id="@+id/llfood"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="5dp"
        android:paddingRight="5dp">

        <TextView
            android:id="@+id/item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_vertical|center_horizontal"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:text="@string/item" />

        <TextView
            android:id="@+id/group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:textColor="@android:color/black"

            android:textSize="10sp"
            android:text="@string/group" />

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"

            android:textColor="@android:color/black"

            android:textSize="16sp"
            android:text="@string/price" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:id="@+id/llqty"
            android:visibility="visible">

            <TextView
                android:id="@+id/textViewQty"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center_vertical"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="30sp"
                android:textColor="@android:color/black"
                android:text="@string/qty" />

            <TextView
                    android:id="@+id/quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_vertical|center_horizontal"

                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="30sp"
                android:textColor="@android:color/black"
                android:visibility="visible" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/ll1"
        android:gravity="center_vertical">

        <ImageButton
                android:id="@+id/buttonplus"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="50dp"
                android:layout_height="50dp"
            android:background="@android:color/transparent"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:scaleType="fitXY"
                android:src="@drawable/plusbutton"
                android:text="@string/plus"
                android:textSize="10sp"
            android:padding="5dp"
            android:visibility="visible" />

        <ImageButton
                android:id="@+id/buttonminus"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="50dp"
                android:layout_height="50dp"
            android:background="@android:color/transparent"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:scaleType="fitXY"
                android:src="@drawable/minusbutton"
                android:text="@string/minus"
                android:textSize="10sp"
            android:visibility="visible"
            android:padding="5dp" />

    </LinearLayout>

    <RelativeLayout
            android:id="@+id/ll2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical"
        android:layout_gravity="center_vertical">

        <com.jaredrummler.materialspinner.MaterialSpinner
                    android:id="@+id/spinner1"
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal" android:enabled="true" />

            <com.jaredrummler.materialspinner.MaterialSpinner
                    android:id="@+id/spinner2"
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:enabled="true"
                    android:gravity="center_horizontal"
                android:layout_below="@+id/spinner1" />

            <com.jaredrummler.materialspinner.MaterialSpinner
                    android:id="@+id/spinner3"
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:enabled="true"
                    android:gravity="center_horizontal"
                android:layout_below="@+id/spinner2" />
        <com.jaredrummler.materialspinner.MaterialSpinner
            android:id="@+id/spinner4"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal" android:enabled="true"
            android:layout_toRightOf="@+id/spinner1" />

        <com.jaredrummler.materialspinner.MaterialSpinner
            android:id="@+id/spinner5"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:enabled="true"
            android:gravity="center_horizontal"
            android:layout_toRightOf="@+id/spinner2"
            android:layout_below="@+id/spinner4" />

        <com.jaredrummler.materialspinner.MaterialSpinner
            android:id="@+id/spinner6"
            android:layout_width="200dp"
            android:layout_gravity="center_horizontal"
            android:enabled="true"
            android:gravity="center_horizontal"
            android:layout_toRightOf="@+id/spinner3"
            android:layout_below="@+id/spinner5"
            android:layout_height="40dp" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll3"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/imageButtonAdd"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@android:color/transparent"
            android:padding="5dp"
            android:scaleType="fitXY"


            android:src="@drawable/addbutton" />

        <ImageButton
            android:id="@+id/imageButtonDelete"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@android:color/transparent"
            android:padding="5dp"
            android:scaleType="fitXY"
            android:src="@drawable/deletebutton" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/plate"
            android:textColor="@android:color/black"
            android:textStyle="bold" />
    </LinearLayout>


</LinearLayout>

